# matrixgl

./: .gitignore  AUTHORS  BUGS  CHANGELOG  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  add-user-entry.sh  config.h.in  configure  configure.ac  gen-bug-report.sh  matrix.c  matrix.desktop  matrix.h  matrix1.h  matrix2.h  matrixgl  matrixgl.1  matrixgl.scr  matrixgl.xml  matrixgl.xpm
debian/: changelog  control  copyright  rules
docs/: Makefile.am  make-help.txt  matrixgl.1  matrixgl.texi
m4/: ax_check_gl.m4  ax_check_glu.m4
macsrc/: Info.plist  MGLSaverView.h  MGLSaverView.m  README  matrix.c  matrix.h  matrix1.h  matrix2.h  matrixgl_Prefix.pch  vroot.h
macsrc/English.lproj/ConfigureSheet.nib/: classes.nib
macsrc/French.lproj/ConfigureSheet~.nib/: info.nib
macsrc/Spanish.lproj/: ._Localizable.strings
macsrc/matrixgl.xcodeproj/: project.pbxproj  stephane.mode1v3  stephane.pbxuser
src/: Makefile.am  Makefile.in  config.h.in  matrix.c  matrix.h  matrix1.h  matrix2.h  matrixgl.1  matrixgl.xml  vroot.h
src/data/: Makefile.am  fonts.h  images.h  matrixgl.xml
winconf/src/: MatrixGL Config.csproj  Program.cs  frmConfig.Designer.cs  frmConfig.cs
winsrc/: install_matrixgl.nsi
